# rag-AI-eval-testcase-generator

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
data/: README.md  push_history.json
data/chroma/: chroma.sqlite3
data/context/: AIP-1.json  AIP-11.json  AIP-12.json  AIP-13.json  AIP-14.json  AIP-15.json  AIP-16.json  AIP-2.json
data/normalized/: AIP-1.json  AIP-11.json  AIP-12.json  AIP-13.json  AIP-14.json  AIP-15.json  AIP-16.json  AIP-2.json
data/retrieval/: AIP-1.json  AIP-2.json
data/sample_responses/: PROJ-1.json
data/sample_stories/: AIP-1.json  AIP-11.json  AIP-12.json  AIP-13.json  AIP-14.json  AIP-15.json  AIP-16.json  AIP-2.json  PROJ-1-raw.json  PROJ-1.json
scripts/: build_retrieval_index.py  collect_context.py  fetch_issue.py  generate_tests.py  inspect_failures.py  push_bugs.py  push_stories.py  push_tests.py  query_retrieval.py  run_deepeval.py  run_eval.py  run_json_eval.py  run_story.py  update_story_ac.py
src/: config.py
src/api/: __init__.py  app.py  routes.py
src/context/: collector.py  normalizer.py  packager.py  retrieval_doc.py
src/evaluation/: __init__.py  ac_coverage.py  duplication.py  gate.py  hallucination.py  input_guard.py  pipeline.py
src/generation/: __init__.py  generator.py  prompt.py
src/jira/: __init__.py  client.py  ingestor.py
src/models/: __init__.py  schemas.py
src/retrieval/: __init__.py  discovery.py  embedder.py  query_builder.py  store.py
tests/api/: test_health.py  (+1 more)
ui/: README.md  index.html  server.py  workflows.py
(+9 files in other folders)
